--- a/suggestion_box/views/suggestion.html
+++ b/suggestion_box/views/suggestion.html
@@ -1,10 +1,14 @@
-test
-{{ test }}
 <div ng-repeat="comment in post.comments">
-    <h3>{{ comment.title }}</h3>
+    <h3>{{ comment.body }}</h3>
     <p>
         <span class="glyphicon glyphicon-plus-sign" ng-click="upVote(comment)"></span>
         Голосов: {{ comment.upvotes }}
     </p>
 </div>
-<a href="/"
+<form ng-submit="addComment()" style="margin-top: 50px" class="col-xs-5">
+    <h3>Добавить комментарий</h3>
+    <div class="form-group">
+        <input type="text" class="form-control" placeholder="Добавляйте комментарий сюда!" ng-model="body"/>
+    </div>
+    <button type="submit" class="btn btn-primary">Добавить</button>
+</form>
