Worked on bootstrap grid system for suggestion.html

--- a/suggestion_box/views/home.html
+++ b/suggestion_box/views/home.html
@@ -11,10 +11,10 @@
     </div>
 
     <form ng-submit="addSuggestion()" style="margin-top: 50px" class="col-xs-5">
-        <h3> Добавить собственный совет</h3>
+        <h3> Добавить собственное предложение</h3>
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Добавляйте свою идею сюда!" ng-model="title"/>
+            <input type="text" class="form-control" placeholder="Добавляйте сюда!" ng-model="title"/>
         </div>
-        <button type="submit" class="btn btn-primary">Добавить идею</button>
+        <button type="submit" class="btn btn-primary">Добавить предложение</button>
     </form>
 </div>
